# fm-tester

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: generate-icons.js
src/: App.css  App.js  App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/ai/: ai_commands.rs  mod.rs
src-tauri/src/chat/: chat_commands.rs  chat_config.rs  mod.rs
src-tauri/src/collection/: collection_commands.rs  collection_utils.rs  commands.rs  config.rs  mod.rs  utils.rs
src-tauri/src/cookie/: commands.rs  config.rs  cookie_commands.rs  mod.rs
src-tauri/src/environment/: commands.rs  environment_commands.rs  environment_config.rs  environment_utils.rs  mod.rs
src-tauri/src/file_dialog/: file_dialog_commands.rs  mod.rs
src-tauri/src/git/: git_config.rs  git_credentials.rs  git_sync_commands.rs  mod.rs
src-tauri/src/history/: commands.rs  history_config.rs  mod.rs
src-tauri/src/http/: commands.rs  http_commands.rs  mod.rs
src-tauri/src/import/: curl_parser.rs  export_postman_converter.rs  import_commands.rs  import_converter.rs  mod.rs  openapi_parser.rs  openapi_types.rs  postman_converter.rs  postman_parser.rs  postman_types.rs
src-tauri/src/md/: md_commands.rs  md_config.rs  mod.rs
src-tauri/src/memory/: commands.rs  memory_commands.rs  memory_config.rs  mod.rs
src-tauri/src/saved_response/: commands.rs  mod.rs  saved_response_config.rs
src-tauri/src/script/: mod.rs  script_commands.rs  script_config.rs
src-tauri/src/settings/: mod.rs  settings_commands.rs  settings_config.rs
src-tauri/src/workspace/: commands.rs  config.rs  mod.rs  workspace_commands.rs
src-tauri/tests/: curl_parser_test.rs
src/components/: Icon.vue  MenuBar.vue  RequestPanel.vue  ResponsePanel.vue  Sidebar.vue  StatusBar.vue  TabsBar.vue  WorkspaceDialog.vue
src/composables/: useEnvironment.js  useGitUpdateChecker.js  useI18n.js  useRequest.js  useResponse.js  useSettings.js  useTabs.js  useToast.js  useWorkspace.js
src/i18n/: index.js
src/locales/: en.json  zh-CN.json
src/utils/: scriptEngine.js  (+1 more)
(+96 files in other folders)
