[package]
name = "fm-tester"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fm_tester_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "stream"] }
url = "2"
regex = "1"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hostname = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = "0.3"
lazy_static = "1.4"
git2 = "0.19"
rfd = "0.15"
